# CMake

./: CMakeLists.txt  LICENSE  Makefile  main.c  readme.md  st_link.cmake  toolchain.cmake
Src/: main.c
Src/LIB/: BIT_MATH.h  STD_TYPES.h
Src/MCAL/MGPIO/: MGPIO_Config.h  MGPIO_Private.h  MGPIO_Prog.c  MGPIO_int.h
Src/MCAL/MRCC/: MRCC_Config.h  MRCC_Int.h  MRCC_Private.h  MRCC_Prog.c
startup/: linker.ld  startup.s
